service.yaml
kind: Service
apiVersion: v1
metadata:
  name: receiver
  namespace: alert-test
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
