route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-fluttering-bonobo
  namespace: alert-test
spec:
  to:
    kind: Service
    name: receiver
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
